# manage-a-farm-with-reinforcement-learning

./: .gitignore  README.md  algorithms.py  config.py  inference.ipynb  inference_and_plots.ipynb  notebook.ipynb  plots.ipynb  pyproject.toml  train.ipynb
agent_models/: value_net_weights.pth
agent_models/MCVFA/delta^years-greedy-50k/: weights.npy
agent_models/MCVFA/gaussian_budget-nowoolcost-15woolprice-200k/: weights.npy
agent_models/MCVFA/gaussian_delta-nowoolcost-15woolprice-200k/: weights.npy
agent_models/MCVFA/gaussian_reward-200k/: weights.npy
agent_models/REINFORCENeuralAdvantage/s6-penalty2.5-edecay1-g0.999/: policy_net_weights-500k.pth  value_net_weights-500k.pth
agent_models/REINFORCENeuralAdvantage/s8-penalty2.5-edecay1-g0.999/: policy_net_weights-300k.pth  policy_net_weights-800k.pth  value_net_weights-800k.pth
data/MCVFA/: final_budget_queue.npy
data/MCVFA/delta-e_greedy_500k/: MC_weights.npy
data/MCVFA/delta^years-greedy-50k/: final_budget_queue.npy
data/MCVFA/gaussian_budget-nowoolcost-15woolprice-200k/: final_budget_queue.npy
data/MCVFA/gaussian_delta-nowoolcost-15woolprice-200k/: final_budget_queue.npy
data/MCVFA/gaussian_reward-200k/: final_budget_queue.npy
data/REINFORCENeuralAdvantage/s6-penalty2.5-edecay1-g0.999/: final_budget_queue-500k.npy
data/REINFORCENeuralAdvantage/s8-penalty2.5-edecay1-g0.999/: final_budget_queue-300k.npy  final_budget_queue-800k.npy
media/REINFORCENeuralAdvantage/: typical_trajectory_storm0.15.txt  typical_trajectory_storm0.6.txt
source/: algorithms.py  config.py  farm_env.py
