[tool.poetry]
name = "manage-a-farm"
version = "0.1.0"
description = ""
authors = ["Leonardo Acquaroli <leonardo.acquaroli@studenti.unimi.it>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
gym = "^0.26.2"
numpy = "^1.9.9"
relearn = "^0.1.2"
pygame = "^2.6.0"
gymnasium = "^0.29.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
torch = {version = "^2.4.0+cpu", source = "pytorch_cpu"}
torchvision = {version = "^0.19.0+cpu", source = "pytorch_cpu"}
tqdm = "^4.66.5"
scikit-learn = "^1.5.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
